--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,14 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~3.0,>=3.0.12",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "friendsofsymfony/user-bundle": "~1.3",
+        "jms/serializer-bundle": "0.13.*",
+        "friendsofsymfony/rest-bundle": "~1.7",
+        "guzzlehttp/guzzle": "5.3.*",
+        "doctrine/migrations": "1.0.*@dev",
+        "doctrine/doctrine-migrations-bundle": "1.0.*",
+        "nelmio/cors-bundle": "1.4.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
