--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,3 +78,62 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+doctrine_migrations:
+    dir_name: %kernel.root_dir%/DoctrineMigrations
+    namespace: Application\Migrations
+    table_name: migration_versions
+    name: Application Migrations
+
+fos_rest:
+    view:
+        view_response_listener: force
+        formats:
+            json: true
+    routing_loader:
+        default_format: json
+        include_format: false
+    exception:
+        codes:
+            'Symfony\Component\Security\Core\Exception\InsufficientAuthenticationException': 401
+
+jms_serializer:
+    handlers:
+        datetime:
+            default_format: Y-m-d H:i:s
+            default_timezone: UTC
+
+    property_naming:
+        separator:  _
+        lower_case: true
+
+    metadata:
+        cache: file
+        debug: %kernel.debug%
+        file_cache:
+            dir: %kernel.cache_dir%/serializer
+
+        # Using auto-detection, the mapping files for each bundle will be
+        # expected in the Resources/config/serializer directory.
+        #
+        # Example:
+        # class: My\FooBundle\Entity\User
+        # expected path: @MyFooBundle/Resources/config/serializer/Entity.User.(yml|xml|php)
+        auto_detection: true
+
+nelmio_cors:
+    defaults:
+        allow_credentials: true
+        allow_headers: ['*']
+        allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS','PATCH']
+        expose_headers: []
+        max_age: 0
+        hosts: []
+        origin_regex: true
+    paths:
+        '^/':
+            origin_regex: true
+            allow_origin: ['*']
+            allow_headers: ['*']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS','PATCH']
+            max_age: 3600
