for post entity, get and insert working

--- a/src/practo/healthByteBundle/Resources/config/routing.yml
+++ b/src/practo/healthByteBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ practohealth_byte_homepage:
 practohealth_byte_user:
     type: rest
     resource : "@practohealthByteBundle/Controller/UserController.php"
+
+practohealth_byte_post:
+    type: rest
+    resource : "@practohealthByteBundle/Controller/PostController.php"
