--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "guzzlehttp/guzzle": "5.3.*",
         "doctrine/migrations": "1.0.*@dev",
         "doctrine/doctrine-migrations-bundle": "1.0.*",
-        "nelmio/cors-bundle": "1.4.0"
+        "nelmio/cors-bundle": "1.4.0",
+        "nandanprac/php-openid": "^2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
